; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_lib552.c_ioctl_callback.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_lib552.c_ioctl_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLIOCMD_RESTARTREAD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"APPLICATION: received a CURLIOCMD_RESTARTREAD request\0A\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"APPLICATION: ** REWINDING! **\0A\00", align 1
@current_offset = common dso_local global i64 0, align 8
@CURLIOE_OK = common dso_local global i32 0, align 4
@CURLIOE_UNKNOWNCMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @ioctl_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ioctl_callback(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @CURLIOCMD_RESTARTREAD, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = call i32 @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  store i64 0, i64* @current_offset, align 8
  %15 = load i32, i32* @CURLIOE_OK, align 4
  store i32 %15, i32* %4, align 4
  br label %19

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @CURLIOE_UNKNOWNCMD, align 4
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %16, %12
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
